Update to the latest based on API changes for the 2.1 release
