# go/api/model_aces_config.go
@@ -1,0 +1,306 @@
+/*
+OpenAPI ColorBox
+
+This is a REST API for the AJA ColorBox product.
+
+The version of the OpenAPI document: 1.0.0
+Contact: support@aja.com
+
+NOTE: This code is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+      Do not edit this code manually.
+
+Copyright (C) 2020 AJA Video Systems Inc.  All rights reserved.
+*/
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// AcesConfig struct for AcesConfig
+type AcesConfig struct {
+	// true if stage is enabled else disabled (unity passthru)
+	Enabled *bool `json:"enabled,omitempty"`
+	Mode *AcesMode `json:"mode,omitempty"`
+	// library entry number, zero is unity bypass
+	AmfLibraryEntry *int32 `json:"amfLibraryEntry,omitempty"`
+	OcioSource *OcioSource `json:"ocioSource,omitempty"`
+	OcioDisplayView *OcioDisplayView `json:"ocioDisplayView,omitempty"`
+}
+
+// NewAcesConfig instantiates a new AcesConfig object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewAcesConfig() *AcesConfig {
+	this := AcesConfig{}
+	var mode AcesMode = ACESMODE_AMF
+	this.Mode = &mode
+	var ocioSource OcioSource = OCIOSOURCE_CAMERA_REC_709
+	this.OcioSource = &ocioSource
+	var ocioDisplayView OcioDisplayView = OCIODISPLAYVIEW_REC_1886_REC_709___DISPLAY_ACES_1_0___SDR_VIDEO
+	this.OcioDisplayView = &ocioDisplayView
+	return &this
+}
+
+// NewAcesConfigWithDefaults instantiates a new AcesConfig object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewAcesConfigWithDefaults() *AcesConfig {
+	this := AcesConfig{}
+	var mode AcesMode = ACESMODE_AMF
+	this.Mode = &mode
+	var ocioSource OcioSource = OCIOSOURCE_CAMERA_REC_709
+	this.OcioSource = &ocioSource
+	var ocioDisplayView OcioDisplayView = OCIODISPLAYVIEW_REC_1886_REC_709___DISPLAY_ACES_1_0___SDR_VIDEO
+	this.OcioDisplayView = &ocioDisplayView
+	return &this
+}
+
+// GetEnabled returns the Enabled field value if set, zero value otherwise.
+func (o *AcesConfig) GetEnabled() bool {
+	if o == nil || o.Enabled == nil {
+		var ret bool
+		return ret
+	}
+	return *o.Enabled
+}
+
+// GetEnabledOk returns a tuple with the Enabled field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *AcesConfig) GetEnabledOk() (*bool, bool) {
+	if o == nil || o.Enabled == nil {
+		return nil, false
+	}
+	return o.Enabled, true
+}
+
+
+
+// HasEnabled returns a boolean if a field has been set.
+func (o *AcesConfig) HasEnabled() bool {
+	if o != nil && o.Enabled != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetEnabled gets a reference to the given bool and assigns it to the Enabled field.
+func (o *AcesConfig) SetEnabled(v bool) {
+	tmp := v
+	o.Enabled = &tmp
+}
+
+// GetMode returns the Mode field value if set, zero value otherwise.
+func (o *AcesConfig) GetMode() AcesMode {
+	if o == nil || o.Mode == nil {
+		var ret AcesMode
+		return ret
+	}
+	return *o.Mode
+}
+
+// GetModeOk returns a tuple with the Mode field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *AcesConfig) GetModeOk() (*AcesMode, bool) {
+	if o == nil || o.Mode == nil {
+		return nil, false
+	}
+	return o.Mode, true
+}
+
+
+
+// HasMode returns a boolean if a field has been set.
+func (o *AcesConfig) HasMode() bool {
+	if o != nil && o.Mode != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetMode gets a reference to the given AcesMode and assigns it to the Mode field.
+func (o *AcesConfig) SetMode(v AcesMode) {
+	tmp := v
+	o.Mode = &tmp
+}
+
+// GetAmfLibraryEntry returns the AmfLibraryEntry field value if set, zero value otherwise.
+func (o *AcesConfig) GetAmfLibraryEntry() int32 {
+	if o == nil || o.AmfLibraryEntry == nil {
+		var ret int32
+		return ret
+	}
+	return *o.AmfLibraryEntry
+}
+
+// GetAmfLibraryEntryOk returns a tuple with the AmfLibraryEntry field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *AcesConfig) GetAmfLibraryEntryOk() (*int32, bool) {
+	if o == nil || o.AmfLibraryEntry == nil {
+		return nil, false
+	}
+	return o.AmfLibraryEntry, true
+}
+
+
+
+// HasAmfLibraryEntry returns a boolean if a field has been set.
+func (o *AcesConfig) HasAmfLibraryEntry() bool {
+	if o != nil && o.AmfLibraryEntry != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetAmfLibraryEntry gets a reference to the given int32 and assigns it to the AmfLibraryEntry field.
+func (o *AcesConfig) SetAmfLibraryEntry(v int32) {
+	tmp := v
+	o.AmfLibraryEntry = &tmp
+}
+
+// GetOcioSource returns the OcioSource field value if set, zero value otherwise.
+func (o *AcesConfig) GetOcioSource() OcioSource {
+	if o == nil || o.OcioSource == nil {
+		var ret OcioSource
+		return ret
+	}
+	return *o.OcioSource
+}
+
+// GetOcioSourceOk returns a tuple with the OcioSource field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *AcesConfig) GetOcioSourceOk() (*OcioSource, bool) {
+	if o == nil || o.OcioSource == nil {
+		return nil, false
+	}
+	return o.OcioSource, true
+}
+
+
+
+// HasOcioSource returns a boolean if a field has been set.
+func (o *AcesConfig) HasOcioSource() bool {
+	if o != nil && o.OcioSource != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetOcioSource gets a reference to the given OcioSource and assigns it to the OcioSource field.
+func (o *AcesConfig) SetOcioSource(v OcioSource) {
+	tmp := v
+	o.OcioSource = &tmp
+}
+
+// GetOcioDisplayView returns the OcioDisplayView field value if set, zero value otherwise.
+func (o *AcesConfig) GetOcioDisplayView() OcioDisplayView {
+	if o == nil || o.OcioDisplayView == nil {
+		var ret OcioDisplayView
+		return ret
+	}
+	return *o.OcioDisplayView
+}
+
+// GetOcioDisplayViewOk returns a tuple with the OcioDisplayView field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *AcesConfig) GetOcioDisplayViewOk() (*OcioDisplayView, bool) {
+	if o == nil || o.OcioDisplayView == nil {
+		return nil, false
+	}
+	return o.OcioDisplayView, true
+}
+
+
+
+// HasOcioDisplayView returns a boolean if a field has been set.
+func (o *AcesConfig) HasOcioDisplayView() bool {
+	if o != nil && o.OcioDisplayView != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetOcioDisplayView gets a reference to the given OcioDisplayView and assigns it to the OcioDisplayView field.
+func (o *AcesConfig) SetOcioDisplayView(v OcioDisplayView) {
+	tmp := v
+	o.OcioDisplayView = &tmp
+}
+
+func (o AcesConfig) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	if o.Enabled != nil {
+		toSerialize["enabled"] = o.Enabled
+	}
+	if o.Mode != nil {
+		toSerialize["mode"] = o.Mode
+	}
+	if o.AmfLibraryEntry != nil {
+		toSerialize["amfLibraryEntry"] = o.AmfLibraryEntry
+	}
+	if o.OcioSource != nil {
+		toSerialize["ocioSource"] = o.OcioSource
+	}
+	if o.OcioDisplayView != nil {
+		toSerialize["ocioDisplayView"] = o.OcioDisplayView
+	}
+	return json.Marshal(toSerialize)
+}
+
+
+func (o *AcesConfig) ApplyMinMaxConstraints() bool {
+	var valueChanged bool = false
+	if o.HasAmfLibraryEntry() {
+		var fieldChanged = false
+		var v int32 = o.GetAmfLibraryEntry()
+		if fieldChanged {
+			o.SetAmfLibraryEntry(v)
+			valueChanged = true
+		}
+	}
+	return valueChanged
+}
+
+type NullableAcesConfig struct {
+	value *AcesConfig
+	isSet bool
+}
+
+func (v NullableAcesConfig) Get() *AcesConfig {
+	return v.value
+}
+
+func (v *NullableAcesConfig) Set(val *AcesConfig) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableAcesConfig) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableAcesConfig) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableAcesConfig(val *AcesConfig) *NullableAcesConfig {
+	return &NullableAcesConfig{value: val, isSet: true}
+}
+
+func (v NullableAcesConfig) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableAcesConfig) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
